@@ -4,6 +4,8 @@ ubuntu-release-upgrader (1:21.04.12) hirsute; urgency=medium
     to hirsute.
   * DistUpgradeQuirks.py: add in a method for reading the system vendor out of
     DMI information which then can be used to block upgrades. (LP: #1929449)
+  * DistUpgradeQuirks.py: If the system vendor is Apple do not allow release
+    upgrades to 21.04 for the time being. (LP: #1929449)
   * DistUpgradeFetcherCore.py: when upgrading with the text view display the
     release announcement in the terminal. (LP: #1925529)
   * tests/test_dist_upgrade_fetcher_core.py: do not display the release
